classDiagram
  class BaseART {
    <<abstract>>
    +params: Dict
    +sample_counter_: int
    +weight_sample_counter_: List[int]
    +is_fitted_: bool
    +W: List[np.ndarray]
    +labels_: np.ndarray

    +__init__(params)
    +validate_data(X)
    +prepare_data(X)
    +step_fit(x)
    +step_pred(x)
    +fit(X, y?, …)
    +partial_fit(X, …)
    +visualize(X, y)
  }

  class FuzzyART
  class GaussianART
  class HypersphereART
  class AlphaART

  BaseART <|-- FuzzyART
  BaseART <|-- GaussianART
  BaseART <|-- HypersphereART
  BaseART <|-- AlphaART
